Fixed permalinks broken

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,4 @@
-{{ partial "header.html" . }}
+{{ template "theme/partials/header.html" . }}
   <div id="article">
    <div class="article-title">{{ .Title }}</div>
    <p class="meta"><small>&nbsp;<i class="fa fa-calendar-o"></i> {{ .Date.Format  "2006-01-02" }}</small></p> <hr/>
