--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,10 +10,10 @@
   <link href="{{ .Site.BaseURL }}/css/bootstrap.min.css" rel="stylesheet">
   <link href="{{ .Site.BaseURL }}/css/hc.css" rel="stylesheet">
   <link href="{{ .Site.BaseURL }}/css/hilight.css" rel="stylesheet">
-  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+  <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
       <![endif] d-->
     </head>
     <body>
