--- a/static/css/hilight.css
+++ b/static/css/hilight.css
@@ -1,4 +1,5 @@
 .highlight pre { background-color: #333 }
+.highlight pre code { color: #c7254e }
 .highlight { background-color: #333 }
 .hll { background-color: #49483e }
 .c { color: #75715e } /* Comment */
